# lab-tools

./: .pre-commit-config.yaml  .vim-template:*.py  Makefile  README.md  pyproject.toml  requirements.txt
h5md/: h5md_bond_list.py  h5md_merge.py  h5md_shrink.py  h5md_sort.py  plot_data.py
md-tools/: acf_vector_analysis.py  block_average.py  bonds_analysis.py  change_vdw.py  check_topology.py  compare_histograms.py  compute_histogram.py  h5md2gro.py  make_adress_index.py  msd.py  msd_internal.py  polymer_distances.py  replicate.py  setup.py  translate_top.py  update_charges.py
md_tools/: __init__  acf_calculation  acf_vector_analysis.py  bonds_h5md2gromacs  bonds_h5md2gromacs.py  calc_msd_per_molecule  change_vdw.py  check_consistent.py  check_topology.py  compare_histograms  compare_histograms.py  compute_histogram  compute_num_neighbours  compute_num_neighbours.py  compute_rg_ee.py  convert_gro2xyz  convert_gromacs2lammps  convert_gromacs2lammps.py  convert_gromacs_tab.py  convert_h5md2gromacs  convert_h5md2gromacs.py  convert_lammps2gromacs  convert_lammps2gromacs.py  copy_charges.py  files_io.py  fix_topol_gro.py  fix_topol_gro_chain_idx  fix_topol_gro_chain_idx.py  fix_topol_gro_idx  gen_cg_topol.py  gen_exclusion_list.py  get_esp_charges.py  gro_update_pos.py  h5md2gro  h5md2gro.py  lammps_list_bonds  lammps_list_bonds.py  make_adress_index.py  mix_tables.py  msd  (+20 more)
scripts/: acf_calculation.py  acf_vector_analysis.py  app_args.py  block_average.py  bonds_analysis.py  bonds_h5md2gromacs.py  calc_msd_per_molecule.py  change_vdw.py  check_consistent.py  h5md2gro.py  (+38 more)
(+104 files in other folders)
